2003-10-28 Bernhard Held <bernhard@bernhardheld.de>

	* .version: bumped to 2.3.6 to reflect the big improvements
	made by Erik and Klaus. Thanks!

2003-10-28 Klaus Flittner <klaus_flittner@gmx.de>

	Replaced the livrange code.
	* src/SDCClrange.c: added new LR code
	* src/SDCCloop.c,
	* src/SDCCBBlock.h: removed remainig parts from old LR code
	* src/ds390/ralloc.c,
	* src/ds390/gen.c: minor fixes to make it work with new code

2003-10-28 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* as/hc08/asm.h,
	* as/hc08/lkrloc.c,
	* src/hc08/gen.c,
	* src/hc08/ralloc.c: Fix various warnings related to the hc08
	* src/SDCCicode.c (geniCodePreInc, geniCodePreDec): Fixed bug #829717
	(tweaked fix for bug #818696)

2003-10-23 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/z80/ralloc.c (joinPushes): Fixed bug #828742

2003-10-23 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCmain.c,
	* sdccconf_in.h: Fixed bug #828387 (--disable-hc08-port didn't work)
	* src/mcs51/gen.c (gencjneshort),
	* src/ds390/gen.c (gencjneshort): Made comparison with AOP_IMMD operand
	more efficient (per Scott Bronson's suggestion)

2003-10-22 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Extended the semantics of the critical keyword to include
	individual statements. See RFE #827755 and #799831
	* src/SDCC.y
	* src/SDCCicode.c
	* src/SDCCopt.c
	* src/SDCCast.c
	* support/Util/SDCCerr.c
	* support/Util/SDCCerr.h
	* src/mcs51/gen.c
	* src/ds390/gen.c
	* src/hc08/gen.c

2003-10-19  Borut Razem <borut.razem@siol.net>

	* src/SDCC.lex: fixed bug #825944 - defined yytext_ptr to make it compile with flex 2.5.31

2003-10-19 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCicode.c (geniCodePreInc, geniCodePreDec, ast2iCode):
	Fixed bug #818696
	* src/SDCCast.c (ast_print): Fixed --dumptree so that preincrement
	and predecrement operand is displayed

2003-10-13 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCval.c (valMinus): fixed bug #826041
